# cagrUFSC2calendar

./: .gitignore  LICENSE  README.md  pyproject.toml
cagrufsc2calendar/: __main__.py  builder.py  constants.py  extractor.py
