[tool.poetry]
name = "cagrufsc2calendar"
version = "0.1.0"
description = ""
authors = ["Francisco Vicenzi <cchenzi@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"
icalendar = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
